fixed contact info spacing bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -228,7 +228,7 @@
   flex-direction: row;
   flex: 2;
   justify-content: space-between;
-  align-items: center;
+  text-align: center;
   text-decoration-line: underline;
   text-decoration-style: solid;
   text-decoration-color: #6082b6;
